[package]
name = "advent2024"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "1"
src = "src/1.rs"

[[bin]]
name = "1a"
src = "src/1a.rs"

[[bin]]
name = "2"
src = "src/2.rs"

[[bin]]
name = "2a"
src = "src/2a.rs"

[[bin]]
name = "3"
src = "src/3.rs"

[[bin]]
name = "3a"
src = "src/3a.rs"

[[bin]]
name = "4"
src = "src/4.rs"

[[bin]]
name = "4a"
src = "src/4a.rs"

[[bin]]
name = "5"
src = "src/5.rs"

[[bin]]
name = "5a"
src = "src/5a.rs"

[[bin]]
name = "6"
src = "src/6.rs"

[[bin]]
name = "6a"
src = "src/6a.rs"

[[bin]]
name = "7"
src = "src/7.rs"

[[bin]]
name = "7a"
src = "src/7a.rs"

[[bin]]
name = "8"
src = "src/8.rs"

[[bin]]
name = "8a"
src = "src/8a.rs"