[package]
name = "advent2024"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
pathfinding = "4.12.0"

[[bin]]
name = "1"
src = "src/1.rs"

[[bin]]
name = "1a"
src = "src/1a.rs"

[[bin]]
name = "2"
src = "src/2.rs"

[[bin]]
name = "2a"
src = "src/2a.rs"

[[bin]]
name = "3"
src = "src/3.rs"

[[bin]]
name = "3a"
src = "src/3a.rs"

[[bin]]
name = "4"
src = "src/4.rs"

[[bin]]
name = "4a"
src = "src/4a.rs"

[[bin]]
name = "5"
src = "src/5.rs"

[[bin]]
name = "5a"
src = "src/5a.rs"

[[bin]]
name = "6"
src = "src/6.rs"

[[bin]]
name = "6a"
src = "src/6a.rs"

[[bin]]
name = "7"
src = "src/7.rs"

[[bin]]
name = "7a"
src = "src/7a.rs"

[[bin]]
name = "8"
src = "src/8.rs"

[[bin]]
name = "8a"
src = "src/8a.rs"

[[bin]]
name = "9"
src = "src/9.rs"

[[bin]]
name = "9a"
src = "src/9a.rs"

[[bin]]
name = "10"
src = "src/10.rs"

[[bin]]
name = "10a"
src = "src/10a.rs"

[[bin]]
name = "11"
src = "src/11.rs"

[[bin]]
name = "11a"
src = "src/11a.rs"

[[bin]]
name = "12"
src = "src/12.rs"

[[bin]]
name = "12a"
src = "src/12a.rs"

[[bin]]
name = "13"
src = "src/13.rs"

[[bin]]
name = "13a"
src = "src/13a.rs"

[[bin]]
name = "14"
src = "src/14.rs"

[[bin]]
name = "14a"
src = "src/14a.rs"

[[bin]]
name = "15"
src = "src/15.rs"

[[bin]]
name = "15a"
src = "src/15a.rs"

[[bin]]
name = "16"
src = "src/16.rs"

[[bin]]
name = "16a"
src = "src/16a.rs"

[[bin]]
name = "17"
src = "src/17.rs"

[[bin]]
name = "17a"
src = "src/17a.rs"

[[bin]]
name = "18"
src = "src/18.rs"

[[bin]]
name = "18a"
src = "src/18a.rs"

[[bin]]
name = "19"
src = "src/19.rs"

[[bin]]
name = "19a"
src = "src/19a.rs"

[[bin]]
name = "20"
src = "src/20.rs"

[[bin]]
name = "20a"
src = "src/20a.rs"

[[bin]]
name = "21"
src = "src/21.rs"

[[bin]]
name = "21a"
src = "src/21a.rs"

[[bin]]
name = "22"
src = "src/22.rs"

[[bin]]
name = "22a"
src = "src/22a.rs"

[[bin]]
name = "23"
src = "src/23.rs"

[[bin]]
name = "23a"
src = "src/23a.rs"